"Trademark and community text cutoff issue Fixed"

--- a/src/main/java/org/ednovo/gooru/client/mvp/home/res_homestyle.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/home/res_homestyle.css
@@ -81,8 +81,13 @@ header {
 	margin:25px 0;
 }
  .social {
-	  text-align:left;
+	  text-align:center;
   }
+  footer .col-md-2 {
+	border-right: 1px solid #616161;
+	min-height: 132px;
+	padding-left: 20px;
+}
  .logo{
 	text-align:left;
 	width:16% !important;
